--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -24,11 +24,11 @@
                 </div>
                 <div class="row" style="padding-left: 30px;">
                 <div class="col-lg-6">
-                <input ngModel type="text" #nom="ngModel" name="nom"  id="nom" placeholder="Nom" required value="">
+                <input ngModel type="text" #nom="ngModel" name="nom"  id="nom" placeholder="Nom *" required value="">
                 <small class="form-text text-muted" *ngIf="nom.touched && !nom.valid" style="color: red !important;">Nom est requis.</small>
                 </div>
                 <div class="col-lg-6">
-                <input ngModel type="text"  #prenom="ngModel" name="prenom" id="prenom" placeholder="Prénom" required>
+                <input ngModel type="text"  #prenom="ngModel" name="prenom" id="prenom" placeholder="Prénom *" required>
                 <small class="form-text text-muted" *ngIf="prenom.touched && !prenom.valid" style="color: red !important;">Prenom est requis.</small>
                 </div>
                 <!--***********************************-->
@@ -37,7 +37,7 @@
                 <small class="form-text text-muted" *ngIf="email.touched && !email.valid" style="color: red !important;">Email est requis.</small>
                 </div>-->
                 <div class="col-lg-6">
-                <input ngModel type="text" #email="ngModel" name="email" id="email" placeholder="Entrer votre email instituel" required
+                <input ngModel type="text" #email="ngModel" name="email" id="email" placeholder="Email instituel *" required
                 pattern="^[a-zA-Z0-9._%+-]+@\etu\.uae\.ac\.ma$">
               <small class="form-text text-muted" *ngIf="email.touched && email.errors?.['required']" style="color: red !important;">Email est requis.</small>
               <small class="form-text text-muted" *ngIf="email.touched && email.errors?.['pattern']" style="color: red !important;">Email invalide.</small>
@@ -45,11 +45,11 @@
                 
                  <!--***********************************-->
                 <div class="col-lg-6">
-                <input ngModel type="number" #num="ngModel" name="num" id="num" placeholder="Numéro apogée" required>
+                <input ngModel type="number" #num="ngModel" name="num" id="num" placeholder="Numéro apogée *" required>
                 <small class="form-text text-muted" *ngIf="num.touched && !num.valid" style="color: red !important;">Numero apogée est requis.</small>
                 </div>
                 <div >
-                <textarea ngModel type="text" #message="ngModel" name="message"  id="message" placeholder="Votre message" required></textarea>
+                <textarea ngModel type="text" #message="ngModel" name="message"  id="message" placeholder="Votre message *" required></textarea>
                 <small class="form-text text-muted" *ngIf="message.touched && !nom.valid" style="color: red !important;">Message est requis.</small>
                </div>
                <div >
