--- a/src/app/components/navbar2/navbar2.component.html
+++ b/src/app/components/navbar2/navbar2.component.html
@@ -15,9 +15,9 @@
       </label>
       <input type="checkbox" id="btn">
       <ul>
-         <li><a routerLink="/tableaup" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}" >PROFESSEUR</a></li>
-         <li><a routerLink="/tableau"routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}" >ETUDIANT</a></li>
-         <li><a routerLink="/tableaucontac"routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}" >MESSAGE</a></li>
+         <li><a routerLink="/listeProf" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}" >PROFESSEUR</a></li>
+         <li><a routerLink="/listeEtudiant"routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}" >ETUDIANT</a></li>
+         <li><a routerLink="/listeMessage"routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}" >MESSAGE</a></li>
          <li><a routerLink="/"routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}" >DECONNECION</a></li>
       </ul>
    </nav>
