--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -10,7 +10,7 @@
    </head>
    <body>
       <nav>
-         <div class="logo" ><a routerLink="/logina">
+         <div class="logo" ><a routerLink="/connexionAdmin">
             <img src="../../../assets/photos/yas Png.png" width="153px" height="70px" id=logo alt="Logo image" style="margin-left: -60px;margin-top: -5px;" />
            </a>
          </div>
@@ -27,8 +27,8 @@
                <a href="#">CONNEXION</a>
                <input type="checkbox" id="btn-1">
                <ul>
-                  <li><a routerLink="/loginp" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}" >PROFESSEUR</a></li>
-                  <li><a routerLink="/login"routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}" >ETUDIANT</a></li>
+                  <li><a routerLink="/connexionProf" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}" >PROFESSEUR</a></li>
+                  <li><a routerLink="/connexionEtudiant"routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}" >ETUDIANT</a></li>
                </ul>
             </li> 
          </ul>
