--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -29,7 +29,7 @@
             <div class="pass-link"(click)="handleForgetPasswordAction()">Mot de passe oublié ?</div> <!--(click)="handleForgetPasswordAction()"-->
           </div>
           <div class="field">
-            <input type="submit" [disabled]="!registerF.invalid" value="Se Connecter">
+            <input type="submit" value="Se Connecter">
           </div>
           <div class="signup-link"> <a  routerLink="/registrerEtudiant">S'inscrire</a></div>
      
