--- a/src/app/components/logina/logina.component.html
+++ b/src/app/components/logina/logina.component.html
@@ -24,7 +24,7 @@
             <label>Mot de passe *</label>
           </div>
           <div class="field">
-            <input type="submit" [disabled]="!registerF.invalid" value="Se Connecter">
+            <input type="submit" value="Se Connecter">
           </div>
         </form>
       </div>
