--- a/src/app/components/loginp/loginp.component.html
+++ b/src/app/components/loginp/loginp.component.html
@@ -27,7 +27,7 @@
             <div class="pass-link"><a routerLink="/mpoublier">Mot de passe oublié ?</a></div>
           </div>
           <div class="field">
-            <input type="submit" [disabled]="!registerF.invalid" value="Se Connecter">
+            <input type="submit" value="Se Connecter">
           </div>
         </form>
       </div>
