--- a/src/app/components/tableau-p/tableau-p.component.html
+++ b/src/app/components/tableau-p/tableau-p.component.html
@@ -58,7 +58,7 @@
                   <td>{{prof.email}}</td>
                   <td>{{prof.motdepasse}}</td>
                   <td><button mat-raised-button type="button" color="primary" data-bs-toggle="modal" data-bs-target="#exampleModal"(click)="edit(prof)">Modifier</button></td>
-                  <td><button mat-raised-button type="button" color="warn"  data-bs-toggle="modal" data-bs-target="#exampleModal1" >Supprimer</button></td>
+                  <td><button mat-raised-button type="button" color="warn"  data-bs-toggle="modal" data-bs-target="#exampleModal0" (click)="supp(prof)">Supprimer</button></td>
                 </tr>
               </tbody>
             </table>
@@ -69,7 +69,6 @@
             <div class="modal-content">
               <div class="modal-header">
                 <h5 class="modal-title" id="exampleModalLabel">Mise à jour d'un professeur</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
               <div class="modal-body">
                 <form [formGroup]="registerF" (ngSubmit)="updateProf()">
@@ -97,33 +96,34 @@
                       class="form-control" placeholder="Entrer votre Mot de passe">
                       <small class="form-text text-muted" *ngIf="registerF.get('motdepasse')?.touched && registerF.get('motdepasse')?.invalid" style="color: red !important;">Mot de passe est requis.</small>
                   </div>
-                  <div class="form-group">
-                    <input style="margin-top: 10px;" position="center" data-bs-dismiss="modal" [disabled]="!registerF.valid" type="submit" value="Modifier" class="btn btn-warning w-100">
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annuler</button>
+                    <input position="center" data-bs-dismiss="modal" [disabled]="!registerF.valid" type="submit" value="Modifier" class="btn btn-warning">
                   </div>
                 </form>
               </div>
             </div>
           </div>
-        </div>   
-        <div class="modal fade" id="exampleModal1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-        aria-hidden="true">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Suppression d'un professeur</h5>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div> 
+        <div class="modal fade" id="exampleModal0" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel1" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel1">Suppression d'un message</h5>
               </div>
-              <div class="modal-body">
-                <div *ngFor="let prof of profDetails">
-                  Est-ce que vous êtes sûre ?
-                  <div class="form-group">                    
-                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal" (click)="deleteProf(prof)" >Supprimer</button>
+              <div class="modal-body1">
+                <form  (ngSubmit)="deleteProf()">
+                        Est-ce que vous êtes sûre?
+                  <div class="modal-footer">                    
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annuler</button>
+                    <input position="center" data-bs-dismiss="modal" type="submit" value="Supprimer" class="btn btn-danger">
                   </div>
-                </div>
-              </div>
+                </form>
+              </div>             
             </div>
           </div>
-        </div>   
+        </div>  
+ 
     </main>
     
 </body>
