--- a/src/app/components/tableau/tableau.component.html
+++ b/src/app/components/tableau/tableau.component.html
@@ -77,7 +77,7 @@
                   <td>{{student.motdepasse}}</td>
                   <td>{{student.cfmotpasse}}</td>
                   <td><button mat-raised-button type="button" color="primary" data-bs-toggle="modal" data-bs-target="#exampleModal"(click)="edit(student)">Modifier</button></td>
-                  <td><button mat-raised-button type="button" color="warn"  data-bs-toggle="modal" data-bs-target="#exampleModal0">Supprimer</button></td>
+                  <td><button mat-raised-button type="button" color="warn"  data-bs-toggle="modal" data-bs-target="#exampleModal0" (click)="supp(student)">Supprimer</button></td>
                 </tr>
               </tbody>
             </table>
@@ -87,7 +87,6 @@
             <div class="modal-content">
               <div class="modal-header">
                 <h5 class="modal-title" id="exampleModalLabel">Mise à jour d'un étudiant</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
               <div class="modal-body">
                 <form [formGroup]="registerF" (ngSubmit)="updateStudent()">
@@ -130,8 +129,9 @@
                       <small class="form-text text-muted" *ngIf="registerF.get('cfmotpasse')?.touched && registerF.get('cfmotpasse')?.invalid" style="color: red !important;">Confirmer mot de passe est requis.</small>
                       <small class="form-text text-muted" *ngIf="registerF.hasError('passwordMismatch')" style="color: red !important;">Le mot de passe et la confirmation du mot de passe ne correspondent pas.</small>
                   </div>
-                  <div class="form-group">
-                    <input style="margin-top: 8px;" type="submit" data-bs-dismiss="modal" [disabled]="!registerF.valid" value="Modifier" class="btn btn-warning w-100">
+                  <div class="modal-footer">                    
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annuler</button>
+                    <input type="submit" data-bs-dismiss="modal" [disabled]="!registerF.valid" value="Modifier" class="btn btn-warning">
                   </div>
                 </form>
               </div>
@@ -143,14 +143,13 @@
             <div class="modal-content">
               <div class="modal-header">
                 <h5 class="modal-title" id="exampleModalLabel1">Suppression d'un étudiant</h5>
-                <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
-                </button>
               </div>
               <div class="modal-body1">
-                <form *ngFor="let student of studentDetails">
+                <form (ngSubmit)="deleteStudent()">
                   Est-ce que vous êtes sûre ?
-                  <div class="form-group">
-                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal" (click)="deleteStudent(student)">Supprimer</button>
+                  <div class="modal-footer">                    
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annuler</button>
+                    <input position="center" data-bs-dismiss="modal" type="submit" value="Supprimer" class="btn btn-danger">
                   </div>
                 </form>
               </div>             
